fix: align hebrew source in side panel to right also on english interface.

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -1539,7 +1539,7 @@ div.interfaceLinks-row a {
   display: inline;
 }
 .readerPanel.hebrew .he {
-  display: inline;
+  display: inline-block;
   text-align: right;
 }
 .readerPanel.english .heOnly .he,
